# quirk

./: .clang-format  .gitignore  CMakeLists.txt
doc/: py diff.txt  quirk.ebnf  quirk.md
src/: compilation_error.h  main.cpp  parser.cpp  parser.h  reader.cpp  reader.h  scanner.cpp  settings.h
src/analysis/: scope_builder.cpp  scope_builder.h
src/ast/: asg_stmt.h  ast.cpp  binary_expr.cpp  binary_expr.h  bool_literal.cpp  bool_literal.h  break_stmt.cpp  break_stmt.h  call_expr.cpp  call_expr.h  call_expr_stmt.h  call_stmt.cpp  call_stmt.h  continue_stmt.cpp  continue_stmt.h  field_def.h  field_def_stmt.cpp  field_def_stmt.h  float_literal.cpp  float_literal.h  func_def_stmt.cpp  func_def_stmt.h  fwd.h  headers.h  if_stmt.cpp  if_stmt.h  int_literal.cpp  int_literal.h  list_literal.cpp  list_literal.h  member_access_expr.cpp  member_access_expr.h  module.h  name_literal.cpp  name_literal.h  node.h  none_literal.cpp  none_literal.h  op_func.h  param_def_expr.cpp  (+20 more)
src/builtins/: fill_global_scope.h  magic_names.h  reserved.h
src/codegen/: codegen.cpp  codegen.h  declgen.cpp  declgen.h  exprgen.cpp  exprgen.h  type_converter_llvm.h
src/parser/: parser.cpp  parser.h
src/reader/: reader.cpp  reader.h
src/scanner/: context.h  scanner.cpp  scanner.h  token.h
src/scopes/: basic_type.cpp  basic_type.h  declaration.h  field.cpp  field.h  function.cpp  function.h  module.cpp  module.h  operator_overload.h  operator_table.h  parameter.cpp  parameter.h  prog_obj.h  scope.h  scope_builder.cpp  scope_builder.h  structure.cpp  structure.h  variable.cpp  variable.h  visitor.cpp  visitor.h
src/syn/: parser.h  reader.cpp  reader.h  scanner.h  token.h
src/syn/sem/: ast_printer.cpp  ast_printer.h  codegen.cpp  codegen.h  declgen.cpp  declgen.h  exprgen.cpp  exprgen.h  namegen.h  operator_table.cpp  operator_table.h  scope_builder.cpp  scope_builder.h  type_converter_llvm.h  type_inference.cpp  type_inference.h  visitor.h
src/syn/sem/ast/: asg_stmt.h  basic_type.h  binary_expr.h  bool_literal.h  break_stmt.h  call_expr_stmt.h  continue_stmt.h  field.h  field_def.h  float_literal.h  func_def_stmt.h  function.h  if_stmt.h  int_literal.h  list_literal.h  module.h  name_literal.h  node.h  none_literal.h  op_func.h  parameter.h  parameter_def.h  primitive_types.h  return_stmt.h  struct_def_stmt.h  structure.h  subscript_expr.h  unary_expr.h  while_stmt.h
src/ti/: type_inference.cpp  type_inference.h
src/type_inference/: type_inference.cpp  type_inference.h
src/util/: ast_printer.cpp  ast_printer.h  hash_combine.h  indent_guard.h  namegen.h  operator_table.cpp  operator_table.h  ptr_iterator.h  ptr_list.h  scopes_printer.cpp  scopes_printer.h
src/visitors/: ast_printer.cpp  ast_printer.h  codegen.cpp  codegen.h  declgen.cpp  declgen.h  exprgen.cpp  exprgen.h  namegen.h  scope_builder.cpp  scope_builder.h  type_converter_llvm.h  type_inference.cpp  type_inference.h
test/: codegen.cpp  parser.cpp  reader.cpp  scanner.cpp  scope_builder.cpp  utils.h
test/codegen/: functions.qk  local_vars.ll  local_vars.qk  ops_overload.ll  ops_overload.qk  simple_asg.ll  simple_asg.qk
test/parser/: annotation_error.qk  ast.txt
test/reader/: bom.qk  ln_col_unix.qk  tab.qk
test/scanner/: floats.qk  indents.qk  indents.txt  indents2.txt  integers.qk  integers.txt  keywords.txt  new_lines.qk  new_lines.txt  simple_lexemes.txt  tab_error.qk
test/scope_builder/: funcs.qk  funcs.txt  ops.txt  structs.qk  structs.txt
tests/: codegen_test.cpp  parser_test.cpp  reader_test.cpp  scanner_test.cpp  scope_builder_test.cpp  ti_test.cpp  utils.h
tests/codegen/: func_call.ll  func_call.qk  functions.ll  if.ll  if.qk  ops.ll  ops.qk  return.ll  return.qk
tests/parser/: asg_to_call_error.qk  ast.qk  ast.txt
tests/reader/: slice.qk  кириллица.qk
tests/scanner/: dedent_doesnt_match.qk  floats.txt  indents.txt  indents2.qk  keywords.qk  keywords.txt  names.qk  names.txt  simple_lexemes.qk  simple_lexemes.txt
tests/scope_builder/: error1.qk  funcs.txt  ops.qk  ops.txt  scopes.qk  scopes.txt  structs.txt
